--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ tomli>=2.0.1
 pytest-asyncio>=0.23.0
 pytest>=7.0.0
 anthropic>=0.25.0
+aiohttp>=3.9.0
 # Optional (uncomment to install) for faster event loop on mac/linux
 uvloop>=0.19.0
