--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ anthropic>=0.25.0
 aiohttp>=3.9.0
 aiofiles>=23.2.0
 PyYAML>=6.0.0
+psutil>=5.9.0
 # Optional (uncomment to install) for faster event loop on mac/linux
 uvloop>=0.19.0
